Camlp5 Version 5.03:
--------------------

* [20 Nov 07] Added commands mkcamlp5 and mkcamlp5.opt to build camlp5
  executables with predefined loaded modules. Added installation of ocpp
  with name ocpp5, instead of just ocpp.
* [19 Nov 07] Added more installed cmx and cmxa files to allow building
  native code linking of all combinations of Camlp5.
* [14 Nov 07] Fixed bug in pr_o.cmo: failed with printing "{a.(i) with ...}".
* [14 Nov 07] Fixed bug under Windows for the printers (pr_o.cmo, pr_r.cmo
  and pr_scheme.cmo): extra return character '\r' was added at end of
  lines.  
* [09 Nov 07] Fixed bug in camlp5o.opt in strict mode: did not parse
  correctly, in particular type expression (the version "camlp5o" without
  ".opt" however worked).
* [29 Oct 07] Added [Pcaml.inter_phrases], a way to set, by program,
  the value of the "-sep" option of the printers kits.
* [28 Oct 07] Fixed bug in pa_fstream.cmo (functional parsers): the
  keyword after "match with" was "parser" instead of "fparser" and
  its code was wrong.
* [27 Oct 07] Added a default lexing buffer (in module [Plexing]) for
  pa_lexer.cmo: then, the programmer does not need to write it any
  more.

Camlp5 Version 5.02:
--------------------

* [14 Oct 07] Changed 'pa_lex.cmo' into 'pa_lexer.cmo' with a different
  syntax (see the documentation).
* [14 Oct 07] In the EXTEND statement, added "LIKE s" as possible
  level position to specify a level containing a rule containing "s"
  in its keywords or tokens.
* [11 Oct 07] Rewritten parsers and printers in Scheme syntax. Deleted
  old module Spretty.

Camlp5 Version 5.01:
--------------------

* [06 Oct 07] Fixed bug in grammars: there was a parsing confusion with
  entries with qualified names with same final identifier, resulting
  bad results. Example: (qualified names "Prim.ident" and "Constr.ident"
  have the same final identifier "ident").
    EXTEND
      Prim.ident: [ [ ... ] ];
      Constr.ident: [ [ ... ] ];
    END;